--- a/GroupProject/Info.plist
+++ b/GroupProject/Info.plist
@@ -24,10 +24,16 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>needed again for proj</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>essential needs</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>pleaseworhthistime</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>valuehastobelongengouh</string>
 	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
+	<array/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
